[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "PyINSTR"
description = "A simple robust instrumentation framework with easy virtualization."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [
    {name = "Marco Schott", email = "marcoschott@outlook.com"},
]
dependencies = [
    "pyvisa"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.scripts]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # Style Error (pycodestyle)
    "W",    # Style Warning (pycodestyle)
    "F",    # Logical errors (pyflakes)
    "B",    # Bugbears
    "A",    # Builtins safety
    # "D",    # Docstring coverage
    "ANN",  # Type annotations
    "UP",   # Python upgrade best practices
    "RUF",  # Ruff’s own rules
    "ISC",  # Implicit string concat
    "N",    # Naming conventions
    "I",    # Import sorting
]
ignore = [
    "ANN401"
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.setuptools_scm]
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*", "--first-parent"]
